<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".exemplo4.ComponentesActivity">


    <CheckBox
        android:id="@+id/cbWindowsPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxWindows" />

    <CheckBox
        android:id="@+id/cbIOs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxIos" />

    <CheckBox
        android:id="@+id/cbAndroid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxAndroid" />

    <RadioGroup
        android:id="@+id/rgSexo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rbFeminino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radioButtonFeminino" />

        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radioButtonMasculino" />

        <Switch
            android:id="@+id/switchNotificacoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/switchOn"
            android:textOff="@string/switchOff"
            android:text="@string/notificacoes" />

        <Button
            android:id="@+id/btnValores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnValores" />

        <EditText
            android:id="@+id/editTextSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/senha"/>

        <EditText
            android:id="@+id/editTextTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/lbl_telefone"/>
    </RadioGroup>
</LinearLayout>